direnv checks for commands .envrc/check4(). Added Makefile/generated().

--- a/.envrc
+++ b/.envrc
@@ -2,4 +2,5 @@
 strict_env
 dotenv_if_exists
 PATH_add pj/bin
-has just &> /dev/null && >&2 echo "just not installed?"
+check4() ( for _c in "$@"; do has ${_c} || >&2 echo "${_c} not on path?"; done; )
+check4 just typst pandoc
