--- a/src/Makefile
+++ b/src/Makefile
@@ -11,10 +11,12 @@
 	pandoc -o $@ $^
 
 
-rwildcard=$(foreach d,$(wildcard $1*),$(call rwildcard,$d/,$2) $(filter $(subst *,%,$2),$d))
+rwildcard = $(foreach d,$(wildcard $1*),$(call rwildcard,$d/,$2) $(filter $(subst *,%,$2),$d))
 HERE := $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 
+# all the sources recursively
 TYPS := $(call rwildcard, $(HERE),*.typ)
+generated = $(foreach e, pdf png svg html, $(TYPS:.typ=.$(e)))
 
 .PHONY: all pdfs pngs svgs htmls clean
 all : htmls
@@ -24,5 +26,4 @@ svgs: $(TYPS:.typ=.svg)
 htmls: $(TYPS:.typ=.html)
 
 clean:
-	rm --verbose --force $(foreach e, pdf png svg html, $(TYPS:.typ=.$(e)))
-
+	rm --verbose --force $(call generated)
